# LiveNT-Code-Bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose-mini.yaml  docker-compose.yaml  main.py  pyproject.toml  readme.md  reference.md  template.env
bot/: Dockerfile  main.py  prestart.sh  pyproject.toml  start.sh  template.env
bot/cogs/administators/: cog.py
bot/cogs/administrators/: cog.py
bot/cogs/ai/: __init__.py  cog.py  embeds.py
bot/cogs/ai_chat/: cog.py
bot/cogs/bans/: cog.py  views.py
bot/cogs/events_handler/: __init__.py  cog.py  embeds.py
bot/cogs/greetings/: cog.py
bot/cogs/help/: __init__.py  cog.py  embeds.py  enums.py  views.py
bot/cogs/muts/: cog.py  views.py
bot/cogs/personalities/: __init__.py  cog.py  embeds.py
bot/cogs/settings/: cog.py  decorators.py  embeds.py
bot/cogs/stats/: __init__.py  cog.py  embeds.py
bot/cogs/template_cog/: cog.py
bot/core/: base_embeds.py  configuration.py  database.py  embeds.py  logger.py  permissions_list.py  personalities.json  singletones.py  typed_dicts.py  utils.py
bot/core/models/: ban.py  guild.py  guild_settings.py  mut.py  permissions.py  personality.py  user.py
bot/docs/: database_structure.md
bot/migrations/: 001_create_guild_settings.sql  20260103_01_d2FeD.py  20260104_01_bhMhQ.py  20260109_01_5cRTG.sql  20260109_02_5su4a.sql  20260110_01_Jm3ud.sql  20260118_01_pscu9.sql  20260122_01_1mPvH.sql  20260122_01_xK4mT.sql  20260123_01_pMhrC.sql  20260202_01_kgYep.sql
bot/migrations/versions/: 192586173db8_fix.py  5c85924a5c84_fix.py  69a0c5bc2081_fix.py  838ce25220c0_fix.py  8466587e7bdf_fix_users.py  9b4e0c3c0453_fix_users.py  ccb6d414a220_fix.py  d45518e8355c_create_tables.py
bot/services/aiu/: __init__.py  service.py
bot/services/aiu-service/: service.py
bot/services/bans/: service.py
bot/services/guilds/: __init__.py  service.py
bot/services/guilds_settings/: __init__.py  service.py
docs/: env.md  (+4 more)
(+10 files in other folders)
