[tool.poetry]
name = "livent-code-bot"
package-mode = false
version = "0.1.0"
description = ""
authors = ["theaihopgg <theaihopgg@gmail.com>"]
readme = "README.md"
packages = [{include = "livent_code_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.43"
alembic = "^1.16.4"
disnake = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
