[tool.poetry]
name = "livent-code-bot"
version = "0.1.0"
description = ""
authors = ["theaihopgg <theaihopgg@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.10.1"
httpx = "^0.28.1"
mysql-connector-python = "^9.4.0"
aiomysql = "^0.2.0"
yoyo-migrations = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
