[project]
name = "bot"
version = "1.0.0"
description = ""
authors = [
    {name = "theaihopgg",email = "theaihopgg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "yoyo-migrations (>=9.0.0,<10.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "disnake (>=2.11.0,<3.0.0)",
    "debugpy (>=1.8.19,<2.0.0)"
]
[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
]
